<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.myfirebaseapp.DeportesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_titulo"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/edtnombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_nombre"
            android:layout_weight="1"
            android:inputType="text"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/edtcalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_calorias"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edtdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_descripcion"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edtduracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_duracion"
        android:inputType="number"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnguardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_guardar"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnactualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_actualizar"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btneliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_eliminar"

            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnfoto"
            android:text="@string/foto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>





</LinearLayout>
