<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.myfirebaseapp.HistorialActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/calo_consu"
            android:layout_width="match_parent"
            android:hint="@string/calors_cons"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/calo_exceden"
            android:layout_width="match_parent"
            android:hint="@string/calors_exceden"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/calo_fin"
            android:layout_width="match_parent"
            android:hint="@string/calors_fin"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/calo_max"
            android:layout_width="match_parent"
            android:hint="@string/calors_max"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/fecha_histor"
            android:layout_width="match_parent"
            android:hint="@string/fecha"
            android:inputType="date"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nom_usuario"
            android:layout_width="match_parent"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/lista"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ListView
            android:id="@+id/lista1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

</LinearLayout>
