<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.myfirebaseapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nombre_Persona"
            android:layout_width="match_parent"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/correo_Persona"
            android:layout_width="match_parent"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/fecha_nazi"
            android:layout_width="match_parent"
            android:hint="@string/fecha"
            android:inputType="date"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnfoto"
            android:text="@string/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/lista"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ListView
            android:id="@+id/lista1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
    </LinearLayout>
