<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.admin.myfirebaseapp.PrimeraActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/mensaje"
        android:textSize="26sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btncrudusu"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="Interfaz_Usuarios"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btndeportes"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/crud_deportes"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnhistorial"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/crud_historial"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btncomidas"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/crud_comidas"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnperfil"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/curd_perfil"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

</LinearLayout>


</LinearLayout>

